[gd_scene load_steps=5 format=2]

[ext_resource path="res://Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://PostGodCombat.gd" type="Script" id=2]
[ext_resource path="res://FadeAnimation2.tres" type="Animation" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FADE3"
length = 0.6
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="PostGodCombat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Wall" parent="Background" instance=ExtResource( 1 )]

[node name="Panel" type="Panel" parent="Background"]
margin_left = 8.0
margin_top = 10.0
margin_right = 135.0
margin_bottom = 247.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InfoHolder2" type="CenterContainer" parent="."]
visible = false
margin_left = 1.0
margin_top = 30.0
margin_right = 144.0
margin_bottom = 199.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InfoHolder2"]
margin_left = 19.0
margin_right = 124.0
margin_bottom = 173.0
text = "You awake in the streets
of Manhattan after 
your run in with
the GODFATHER.


VISIT the 4 Boroughs
home to the various
gangs of New York


DEFEAT faction members
to gain reputation and
level up


UPGRADE your weapons
and items


Gather your reputation
to GODFATHER status
for a chance to take
your revenge"
align = 1

[node name="InfoHolder" type="CenterContainer" parent="."]
margin_top = 15.0
margin_right = 143.0
margin_bottom = 221.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InfoHolder"]
margin_left = 10.0
margin_top = 9.0
margin_right = 133.0
margin_bottom = 196.0
custom_constants/line_spacing = 3
text = "Instructions:

Fight the different factions
in their home regions to gain
reputation and money.

Money can be used to
purchase new items in the
various stores or gambled
in different games for a
chance of winning more.

Reputation is required to level
up and is gained by winning
fights. Gaining enough Rep
will cause you to level
up and more items to become
available in the stores.

Warning however, enemies
will level up as you do and
defeat in combat can result
in a loss of Reputation.

*Your progress can be saved
in the options menu*"
align = 1

[node name="BeginButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -34.5
margin_top = -35.5
margin_right = 34.5
margin_bottom = -15.5
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FADE3 = SubResource( 1 )
anims/FadeAnimation = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.00347222
anchor_right = 0.00347222
margin_right = 143.0
margin_bottom = 256.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BeginButton" to="." method="_on_BeginButton_pressed"]
